# AdventOfInit

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  session.txt
src/: AdventOfInit.cpp  CMakeLists.txt  aocutils.h
template/: CMakeLists.txt
template/src/: day@DAY@.cpp
test/: CMakeLists.txt  files_test.cpp  grid_test.cpp  neighbours_test.cpp  path_test.cpp  print_test.cpp  search_test.cpp  strings_test.cpp
test/resource/: find_path1_len24.txt  find_path2_len24.txt  find_path3_no_path.txt  new_line.txt  variant_easy.txt  variant_hard.txt
